[package]
name = "kalnal"
version = "0.1.0"
edition = "2021"

[lib]
name = "kalnal"
path = "src/lib.rs"

[[bin]]
name = "kalnal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
custom_error = "1.9.2"
dashmap = "5.4.0"
fxhash = "0.2.1"
rayon = "*"
insta = "*"
kodama = "0.2"
plotters = "0.3"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
