[package]
name = "kalnal"
version = "0.1.0"
edition = "2021"

[lib]
name = "kalnal"
path = "src/lib.rs"

[[bin]]
name = "kalnal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
bio = "1.4"
ndarray = "0.15"
itertools = "0.12"
rand = "0.8"
rayon = "1.8"
