[package]
name = "kalnal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bio = "3.0"
ndarray = "0.17"
itertools = "0.14"
rayon = "1.9"
dbscan = "0.3"